tests/parser/pragmas/foo.m.out
In foo.m, line 4
|     % mh:flow:unused x, "we dont' need x here, thanks"
|     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ error: invalid miss_hit pragma: unknown tool 'flow:unused'
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
