tests/parser/pragmas/foo.m
%% (c) Copyright 2020 Florian Schanda

function v = foo(x)
    % mh:flow:unused x, "we dont' need x here, thanks"
    v = 12;
end
